--- a/src/components/taskList.css
+++ b/src/components/taskList.css
@@ -1,7 +1,6 @@
 .plan-list {
   width: 300px;
   list-style-type: none;
-  background-color: #f1f3f5;
   padding: 0 12px;
 }
 
